<resources>
    <string name="app_name">FX Fix</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_trade_sessions">Trade Sessions</string>
    <string name="menu_cal">FX Calculator</string>
    <string name="menu_edu">FX Education</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_info">Info</string>
    <string name="img_icon">Image Icon</string>
    <string name="time_clock_format_main">hh:mm:ss a \n EE d MMM yyyy zz</string>
</resources>
