<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_trade_sessions"
            android:icon="@drawable/ic_menu_trade"
            android:title="@string/menu_trade_sessions" />
        <item
            android:id="@+id/nav_cal"
            android:icon="@drawable/ic_menu_cal"
            android:title="@string/menu_cal" />
        <item
            android:id="@+id/nav_edu"
            android:icon="@drawable/ic_menu_edu"
            android:title="@string/menu_edu" />

    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_info"
                android:icon="@drawable/ic_menu_info"
                android:title="@string/menu_info" />
        </menu>
    </item>

</menu>
