<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_trade_sessions">

    <fragment
        android:id="@+id/nav_trade_sessions"
        android:name="com.ifeetech.fxfix.ui.tradesessions.TradeSessionsFragment"
        android:label="@string/menu_trade_sessions"
        tools:layout="@layout/fragment_trade_sessions" />

    <fragment
        android:id="@+id/nav_cal"
        android:name="com.ifeetech.fxfix.ui.fxcalculator.FxCalculatorFragment"
        android:label="@string/menu_cal"
        tools:layout="@layout/fragment_fx_calculator" />

    <fragment
        android:id="@+id/nav_edu"
        android:name="com.ifeetech.fxfix.ui.fxeducation.FxEducationFragment"
        android:label="@string/menu_edu"
        tools:layout="@layout/fragment_fx_education" />



    <fragment
        android:id="@+id/nav_settings"
        android:name="com.ifeetech.fxfix.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_info"
        android:name="com.ifeetech.fxfix.ui.info.InfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_info" />
</navigation>